--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/grey"
     tools:context="br.com.the_guardian.registerScreen">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -43,7 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="20dp"
         android:font="@font/jurabold"
         android:text="@string/para_come_ar_entre_com_suas_credenciais"
         android:textAlignment="textStart"
@@ -161,6 +163,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="-20dp"
         android:layout_gravity="center"
         android:font="@font/jurabold"
         android:text="@string/j_possu_uma_conta"
@@ -179,13 +182,13 @@
         android:id="@+id/btnVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="-55dp"
+        android:layout_marginStart="246dp"
+        android:layout_marginTop="-57dp"
         android:textSize="15sp"
         android:text="@string/voltar_login"
         android:fontFamily="@font/jurabold"
         android:textColor="@color/purple"
-        android:backgroundTint="@color/grey"
+        android:background="@android:color/transparent"
         app:layout_constraintHorizontal_bias="0.361"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
