--- a/app/src/main/res/layout/dialog_marker_info.xml
+++ b/app/src/main/res/layout/dialog_marker_info.xml
@@ -2,19 +2,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/grey"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/marker_title_home"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:textSize="19sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:textColor="@color/dark_blue"
         app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/kronaone_regular"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -22,9 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17sp"
+        android:textColor="@color/dark_blue"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:fontFamily="@font/jurabold"
         app:layout_constraintTop_toBottomOf="@id/marker_title_home"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -36,6 +41,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:textColor="@color/dark_blue"
+        android:fontFamily="@font/jurabold"
         app:layout_constraintTop_toBottomOf="@id/marker_reference_home"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -47,30 +54,39 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:textColor="@color/dark_blue"
+        android:fontFamily="@font/kronaone_regular"
         app:layout_constraintTop_toBottomOf="@id/marker_address_home"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="85dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/marker_disponibility_home">
+        app:layout_constraintTop_toBottomOf="@+id/marker_disponibility_home"
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnRota"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="141dp"
+            android:layout_height="49dp"
             android:layout_marginEnd="10dp"
-            android:text="Traçar Rota" />
+            android:fontFamily="@font/kronaone_regular"
+            style="@style/login_button"
+            android:text="@string/rota"
+            android:textColor="@color/grey"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnConsultar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Consultar" />
+            android:layout_width="141dp"
+            android:layout_height="49dp"
+            android:textColor="@color/dark_blue"
+            style="@style/login_button_GREY"
+            android:fontFamily="@font/kronaone_regular"
+            android:text="@string/consulta" />
 
     </LinearLayout>
 
