--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,6 @@
         <item name="android:padding">13dp</item>
         <item name="android:layout_marginLeft">80dp</item>
         <item name="android:layout_marginRight">80dp</item>
-
         <item name="android:textSize">20sp</item>sssss
     </style>
 
@@ -22,10 +21,29 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/button_login</item>
-        <item name="android:padding">1dp</item>
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:textColor">"@color/white"</item>
+    </style>
+
+    <style name="login_button_GREY">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_login_grey</item>
+        <item name="android:padding">1dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:textColor">"@color/dark_blue"</item>
+    </style>
+
+    <style name="button_voltar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_login_grey</item>
+        <item name="android:padding">1dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:textColor">"@color/dark_blue"</item>
     </style>
 
     <style name="barranumbercard">
@@ -45,5 +63,12 @@
         <item name="android:layout_marginLeft">1dp</item>
         <item name="android:layout_marginRight">1dp</item>
     </style>
+
+    <style name="cardsdatascreen">
+        <item name="android:layout_width">29dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/quadradonc</item>
+    </style>
+
 
 </resources>
