--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -54,24 +54,44 @@ Textview que indica a tela menu ou "home"-->
             tools:context=".MapsActivity" />
     </androidx.cardview.widget.CardView>
 
-<!--Botão que cadastra o cartão-->
+    <!--Botão que cadastra o cartão-->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCadastrarCartao"
-        android:layout_width="386dp"
-        android:layout_height="84dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="185dp"
+        android:layout_height="99dp"
+        android:layout_marginTop="10dp"
         android:text="@string/habilita_cartão"
         android:background="@drawable/button_border_round"
         android:textColor="@color/grey"
         android:fontFamily="@font/jurabold"
-        android:textSize="16sp"
         android:layout_marginStart="13dp"
         android:layout_marginBottom="10dp"
         android:textAlignment="textStart"
-        android:paddingStart="30dp"
+        android:paddingStart="10dp"
         android:textAllCaps="false"
+        android:textSize="14sp"
         android:drawableEnd="@drawable/cardenfeite"
-        android:paddingEnd="-6dp"
+        android:paddingEnd="-25dp"
+        android:paddingTop="6dp"
+        />
+    <!--Botão que mostra as locações do usuário-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnMinhasLocacoes"
+        android:layout_width="180dp"
+        android:layout_height="99dp"
+        android:layout_marginTop="-110dp"
+        android:text="@string/minhas_locacoes"
+        android:background="@drawable/button_border_round"
+        android:textColor="@color/grey"
+        android:fontFamily="@font/jurabold"
+        android:paddingTop="18dp"
+        android:layout_marginStart="217dp"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:paddingStart="10dp"
+        android:textAllCaps="false"
+        android:drawableEnd="@drawable/cadeado"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
