Alterações: Cores e estilos

--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -38,7 +38,7 @@
         android:text="@string/bem_vindo"
         android:textAlignment="textStart"
         android:textColor="@color/dark_blue"
-        android:textSize="40sp" />
+        android:textSize="30sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
@@ -156,7 +156,8 @@
         android:width="250dp"
         android:layout_gravity="center"
         android:layout_marginTop="0dp"
-        android:text="@string/cadastrar_se" />
+        android:text="@string/cadastrar_se"
+        android:textColor="@color/grey"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/AppCompatTextView4"
