--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -119,11 +119,11 @@
         />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="299dp"
+        android:layout_width="270dp"
         android:layout_height="50dp"
         android:id="@+id/btnEnviarLogin"
         style="@style/login_button"
-        android:layout_marginStart="65dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="10dp"
         android:text="@string/login"
         android:fontFamily="@font/kronaone_regular"
@@ -135,8 +135,9 @@
         android:id="@+id/tvCadastrar"
         android:layout_width="240dp"
         android:layout_height="30dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="86dp"
         android:layout_marginTop="13dp"
+        android:textAlignment="center"
         android:text="@string/sem_cadastro"
         android:fontFamily="@font/jurasemibold"
         android:textColor="@color/purple"
@@ -149,7 +150,7 @@
         android:layout_height="30dp"
         android:text="@string/ou"
         android:fontFamily="@font/jurabold"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="190dp"
         android:layout_marginTop="-10dp"
         android:textColor="@color/dark_blue"
         android:textSize="16sp"/>
@@ -159,7 +160,7 @@
         android:layout_width="75dp"
         android:layout_height="26dp"
         android:layout_marginTop="-9dp"
-        android:layout_marginStart="174dp"
+        android:layout_marginStart="166dp"
         android:fontFamily="@font/jurasemibold"
         android:text="@string/ver_mapa"
         android:textColor="@color/purple"
