--- a/app/src/main/res/layout-small/activity_data_screen.xml
+++ b/app/src/main/res/layout-small/activity_data_screen.xml
@@ -53,7 +53,7 @@
             android:textAlignment="center"
             android:textColor="@color/dark_blue"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp"/>
 
         <RadioGroup
@@ -131,7 +131,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:text="@string/avisoarmario"
         android:textSize="12sp"
@@ -139,7 +139,7 @@
         android:textAlignment="center"
         android:textColor="@color/dark_blue"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="0dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/marker_title"
@@ -150,7 +150,7 @@
         android:textColor="@color/dark_blue"
         android:textSize="18sp"
         android:fontFamily="@font/kronaone_regular"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="2dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/marker_reference"
@@ -160,7 +160,7 @@
         android:textAlignment="center"
         android:textSize="16sp"
         android:fontFamily="@font/jurabold"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="2dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/marker_disponibility"
@@ -170,7 +170,7 @@
         android:textAlignment="center"
         android:textSize="16sp"
         android:fontFamily="@font/jurabold"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="2dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_consultar"
@@ -182,6 +182,6 @@
         android:layout_width="250dp"
         android:layout_height="49dp"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="10dp"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
